[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/menu/game_lobby_scene.gd" type="Script" id=1]

[node name="Game_Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -42.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Info_Container" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 510.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Players_Container" type="VBoxContainer" parent="HBoxContainer/Player_Info_Container"]
margin_right = 510.0
margin_bottom = 277.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Chat_BoxContainer" type="HBoxContainer" parent="HBoxContainer/Player_Info_Container"]
margin_top = 281.0
margin_right = 510.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Game_Setting_Container" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Map_Setting_Container" type="VBoxContainer" parent="HBoxContainer/Game_Setting_Container"]
margin_right = 253.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Game_Setting_Container/Map_Setting_Container"]
margin_right = 253.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/Game_Setting_Container/Map_Setting_Container"]
margin_top = 112.0
margin_right = 253.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button2" type="Button" parent="HBoxContainer/Game_Setting_Container/Map_Setting_Container"]
margin_top = 224.0
margin_right = 253.0
margin_bottom = 333.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button3" type="Button" parent="HBoxContainer/Game_Setting_Container/Map_Setting_Container"]
margin_top = 337.0
margin_right = 253.0
margin_bottom = 445.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button4" type="Button" parent="HBoxContainer/Game_Setting_Container/Map_Setting_Container"]
margin_top = 449.0
margin_right = 253.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Rules_Container" type="VBoxContainer" parent="HBoxContainer/Game_Setting_Container"]
margin_left = 257.0
margin_right = 510.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_right = 253.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button2" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_top = 43.0
margin_right = 253.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button3" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_top = 86.0
margin_right = 253.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button4" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_top = 129.0
margin_right = 253.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button5" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_top = 172.0
margin_right = 253.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button6" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_top = 216.0
margin_right = 253.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button7" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_top = 259.0
margin_right = 253.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button8" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_top = 302.0
margin_right = 253.0
margin_bottom = 341.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button9" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_top = 345.0
margin_right = 253.0
margin_bottom = 385.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button10" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_top = 389.0
margin_right = 253.0
margin_bottom = 428.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button11" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_top = 432.0
margin_right = 253.0
margin_bottom = 471.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button12" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_top = 475.0
margin_right = 253.0
margin_bottom = 514.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button13" type="Button" parent="HBoxContainer/Game_Setting_Container/Rules_Container"]
margin_top = 518.0
margin_right = 253.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -509.0
margin_top = -35.0
margin_right = 511.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousButton" type="Button" parent="HBoxContainer2"]
margin_right = 107.0
margin_bottom = 35.0
text = "Previous Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaunchButton" type="Button" parent="HBoxContainer2"]
margin_left = 111.0
margin_right = 933.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Launch!"

[node name="MenuButton" type="Button" parent="HBoxContainer2"]
margin_left = 937.0
margin_right = 1020.0
margin_bottom = 35.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="HBoxContainer2/PreviousButton" to="." method="_on_PreviousButton_button_down"]
[connection signal="button_down" from="HBoxContainer2/LaunchButton" to="." method="_on_LaunchButton_button_down"]
[connection signal="button_down" from="HBoxContainer2/MenuButton" to="." method="_on_MenuButton_button_down"]
